force-app/main/default/objects/Budget_Version__c/Budget_Version__c.object-meta.xml
<CustomObject>
    <label>Budget Version</label>
    <nameField>
        <displayFormat>BV-{00000}</displayFormat>
        <label>Codice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>