force-app/main/default/objects/Budget_Version__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <label>Anno</label>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>