force-app/main/default/objects/Budget_Version__c/fields/Anno_Se_Ufficiale__c.field-meta.xml
<CustomField>
    <fullName>Anno_Se_Ufficiale__c</fullName>
    <externalId>true</externalId>
    <label>Anno Se Ufficiale</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>