force-app/main/default/objects/Budget_Version__c/fields/Data_Promozione__c.field-meta.xml
<CustomField>
    <fullName>Data_Promozione__c</fullName>
    <label>Data Promozione</label>
    <type>DateTime</type>
</CustomField>