force-app/main/default/objects/Budget_Version__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <label>Descrizione</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>