force-app/main/default/objects/Budget_Version__c/fields/Numero_Versione__c.field-meta.xml
<CustomField>
    <fullName>Numero_Versione__c</fullName>
    <label>Numero Versione</label>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>