force-app/main/default/objects/Budget_Version__c/fields/Promossa_Da__c.field-meta.xml
<CustomField>
    <fullName>Promossa_Da__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promossa Da</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Budget Versions Promosse</relationshipLabel>
    <relationshipName>Budget_Versions_Promosse</relationshipName>
    <type>Lookup</type>
</CustomField>