force-app/main/default/objects/Budget_Version__c/fields/Sostituisce__c.field-meta.xml
<CustomField>
    <fullName>Sostituisce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sostituisce</label>
    <referenceTo>Budget_Version__c</referenceTo>
    <relationshipLabel>Versione Successiva</relationshipLabel>
    <relationshipName>Successiva</relationshipName>
    <type>Lookup</type>
</CustomField>