force-app/main/default/objects/Budget_Version__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provvisorio</fullName>
                <default>true</default>
                <label>Provvisorio</label>
            </value>
            <value>
                <fullName>Ufficiale</fullName>
            </value>
            <value>
                <fullName>Storicizzata</fullName>
            </value>
            <value>
                <fullName>Cestinata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>